@@ -15,8 +15,9 @@ description = """
 """
 lang = "en" # language_code
 url = "http://127.0.0.1:3000"
+# the top most directory (e.g. blog) will be omitted in url
 include = [
-  "blog/**/*"
+  "blog/**/*.rst"
 ]
 license = "CC-BY-NC-SA-4.0"
 # this or [[website.metadata.authors]] either is required
@@ -37,20 +38,39 @@ email = "yasuhiro.asaka@grauwoelfchen.net"
 avatar = "https://www.gravatar.com/avatar/...?s=40"
 ```
 
+### Article
+
+```zsh
+% cat blog/post/article.rst
+.. title:: Nice foo
+.. lang:: en # optional
+.. date:: 2018-01-31 12:04:00 UTC
+.. description:: This is an article about nice foo. # optional
+.. slug:: foo.html # optional (default filename as is)
+
+Foo is nice! # above blank line before content is required
+```
+
 ### Build
 
-Put your articles under a directory which is contained in `include` section.
+Put your articles under a directory which is contained in `include` section in
+config file.
 
 ```zsh
 # e.g. blog
 % tree blog
 blog
+├── post
+│   └── article.rst
 └── hello-word.rst
 ```
 
 And then generate HTML files into a directory specified with `target-dir`.
 
 ```zsh
+% nib
+
+# with built version
 % make build
 % ./target/debug/nib
 ```
@@ -65,7 +85,9 @@ dst
 ├── hello-world.html
 ├── img
 ├── index.html
-└── js
+├── js
+└── post
+    └── foo.html
 ```
 
 ### Development
