@@ -1,4 +1,4 @@
-<a class="title" href="{{article.slug}}"><h3>{{article.title}}</h3></a>
+<a class="title" href="{{article._path}}"><h3>{{article.title}}</h3></a>
 <span class="date">{{article.date}}</span>
 {{#if article.description}}
 <p class="description">{{article.description}}</p>
